--- a/Ui/eve_ui.ui
+++ b/Ui/eve_ui.ui
@@ -19,6 +19,8 @@
   <property name="styleSheet">
    <string notr="true">border-radius:10px;
 background-color: qlineargradient(spread:pad, x1:0, y1:0.046, x2:1, y2:0.972, stop:0 rgba(229, 253, 255, 255), stop:0.994318 rgba(131, 250, 255, 255));
+background-color: qlineargradient(spread:pad, x1:0.187, y1:0.478, x2:0.907689, y2:0.813, stop:0 rgba(255, 255, 255, 226), stop:0.994318 rgba(199, 199, 199, 197));
+background-color: qlineargradient(spread:pad, x1:0.187, y1:0.478, x2:0.907689, y2:0.813, stop:0 rgba(255, 255, 255, 239), stop:0.994318 rgba(215, 215, 215, 217));
 
 
 
@@ -28,26 +30,21 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.046, x2:1, y2:0.972, st
    <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,1">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="label_inputImages">
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(170, 255, 255);
-background-color: rgb(85, 255, 255);
-background-color: rgb(0, 255, 255);</string>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-       </layout>
+     <layout class="QGridLayout" name="gridLayout_main" columnstretch="2,1">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_inputImages">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 255, 255);
+</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
-      <item>
+      <item row="0" column="1">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QWidget" name="widget_cat" native="true">
